Fix overflow issue on mobile
On mobile, the animated gradient background caused the webpage's width to resize, resulting in large blank space when a grad gets too far on the x-axis.

Adding position:relative and overflow:hidden to the css stylesheet fixes this.

--- a/app/main.css
+++ b/app/main.css
@@ -1,5 +1,7 @@
 main {
 	height: 100vh;
+	position: relative;
+	overflow: hidden;
 }
   
   main::before, main::after {
